bk_ida/gccida/c1/qty_compare
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/qty_compare/src/local-alloc.c:2178:56: error: use of undeclared identifier 'qty_0'
LODWORD( v2) = ( int)( ( double)( *( int *)( ( char *)&qty_0->size + v2) 
                                                       ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/qty_compare/src/local-alloc.c:2179:24: error: use of undeclared identifier 'qty_0'
* *( int *)( ( char *)&qty_0->freq + v2) 
                       ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/qty_compare/src/local-alloc.c:2180:41: error: use of undeclared identifier 'qty_0'
* floor_log2_wide( *( int *)( ( char *)&qty_0->n_refs + v2))) 
                                        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/qty_compare/src/local-alloc.c:2181:35: error: use of undeclared identifier 'qty_0'
/ ( double)( *( int *)( ( char *)&qty_0->death + v2) - *( int *)( ( char *)&qty_0->birth + v2)) 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/qty_compare/src/local-alloc.c:2181:77: error: use of undeclared identifier 'qty_0'
/ ( double)( *( int *)( ( char *)&qty_0->death + v2) - *( int *)( ( char *)&qty_0->birth + v2)) 
                                                                            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/qty_compare/src/local-alloc.c:2185:22: error: use of undeclared identifier 'qty_0'
- ( int)( ( double)( qty_0[v3].size * qty_0[v3].freq * floor_log2_wide( qty_0[v3].n_refs)) 
                     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/qty_compare/src/local-alloc.c:2185:39: error: use of undeclared identifier 'qty_0'
- ( int)( ( double)( qty_0[v3].size * qty_0[v3].freq * floor_log2_wide( qty_0[v3].n_refs)) 
                                      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/qty_compare/src/local-alloc.c:2185:73: error: use of undeclared identifier 'qty_0'
- ( int)( ( double)( qty_0[v3].size * qty_0[v3].freq * floor_log2_wide( qty_0[v3].n_refs)) 
                                                                        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/qty_compare/src/local-alloc.c:2186:14: error: use of undeclared identifier 'qty_0'
/ ( double)( qty_0[v3].death - qty_0[v3].birth) 
             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/qty_compare/src/local-alloc.c:2186:32: error: use of undeclared identifier 'qty_0'
/ ( double)( qty_0[v3].death - qty_0[v3].birth) 
                               ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/qty_compare/src/obj/local-alloc.o] Error 1
